# ri-practicas

Practica2/: SalidaConCerradas.txt  SalidaSinCerradas.txt  emojis.py  main.py  pyproject.toml
Practica3/: main.py  matriz.csv  matriz.txt  palabras.txt
Practica4/: main.py
Practica5/: documento2.txt  main.py
Practica6/: indice_invertido.json  main.py
SegundoParcial/: main.py
