[tool.poetry]
name = "practica2"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
demoji = "^0.4.0"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
